<resources>
    <string name="app_name">GlobalSangha</string>
    <string name="welcome_message">Bienvenido, %1$s!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_prompt">Don\'t have an account? Register here!</string>
    <string name="login_prompt">Already have an account? Login here!</string>
    <string name="logout">Cerrar sesión</string>

</resources>