<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Email Input -->
    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_below="@id/etRegEmail"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/etRegConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_below="@id/etRegPassword"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/register"
        android:layout_below="@id/etRegConfirmPassword"
        android:layout_marginTop="20dp" />

    <!-- Login Redirect Text -->
    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt"
        android:layout_below="@id/btnRegister"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
