<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp" />

    <!-- Register Redirect Text -->
    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_prompt"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>